clusters/cluster/apps/media/radarr/service-radarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: apps
spec:
  selector:
    app: radarr
  ports:
    - protocol: TCP
      port: 7878
      targetPort: 7878
      name: http
