clusters/cluster/apps/media/radarr/ingress-radarr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-ingress
  namespace: apps
spec:
  rules:
    - host: radarr.${cluster_domain}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 7878
